# ioptron-for-python

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: .readthedocs.yaml  conf.py  index.rst  install_usage.rst  ioptron_for_python.rst  modules.rst
examples/: Driver_Example.ipynb  RS232_Example.ipynb
ioptron_driver/: __init__.py  __main__.py  controller.py
ioptron_for_python/: __init__.py  __main__.py  controller.py
