[project]
name = "ioptron_for_python"
dynamic = ["version"]
authors = [
    { name="Matheus J. Castro" }
]
description="iOptron Driver for Python. This module uses the iOptron Mount RS-232 Command Language."
readme = "README.md"
requires-python = ">=3"
classifiers=[
 "Programming Language :: Python :: 3",
 "License :: OSI Approved :: GNU Affero General Public License v3",
 "Operating System :: OS Independent",
]
license = {file = "LICENSE"}
dependencies = [
    "pyserial"
]

# [project.scripts]
# ioptron = "ioptron_for_python.gui:main"

[project.urls]
"homepage" = "https://ioptron-for-python.readthedocs.io/"
"repository" = "https://github.com/MatheusJCastro/ioptron-for-python"

[tool.setuptools.dynamic]
version = { attr = "ioptron_for_python.__version__" }